# ros_gazebo_python

./: .gitignore  README.md
scripts/: commands.bash  run_single_basicbot_ga_debug.sh  start_basicbot_non_ga_server.sh
src/adding_service/: adding_service.launch  package.xml
src/adding_service/src/: adder.py  adder_client.py  adder_transporter.py
src/adding_service/test/: ga_server.py  server.py
src/basicbot/basicbot_control/src/: turn_drive_scan.py  turn_drive_scan_single.py  wander.py
src/basicbot/basicbot_description/urdf/: basicbot.gazebo  basicbot.xacro
src/basicbot/basicbot_gazebo/launch/: basicbot.launch
src/basicbot/basicbot_gazebo/worlds/: basicbot.world  empty.world
src/basicbot/basicbot_utils/: CMakeLists.txt
src/basicbot/basicbot_utils/src/basicbot_utils/: __init__.py  get_laser_scan.py
src/basicbot_ga/: CMakeLists.txt  basicbot_ga.launch  gazebo_only.launch  not_grouped_basicbot_ga.launch  output2.txt  package.xml  single_basicbot_ga.launch
src/basicbot_ga/src/: basicbot_transporter.py  drive_node.py  turn_drive_scan_node.py
src/basicbot_ga/test/: ga_server.py  non_ga_server.py
src/firstbot/: CMakeLists.txt
src/firstbot/firstbot_control/src/: drop.py
src/firstbot/firstbot_description/urdf/: firstbot.xacro  firstbot_ball.xacro
src/firstbot/firstbot_gazebo/launch/: firstbot_world.launch
src/firstbot/firstbot_gazebo/worlds/: firstbot_world.world
src/ga_basicbot_ros_indigo/: CMakeLists.txt  README.txt  package.xml
src/world_step/: CMakeLists.txt  package.xml  setup.py
src/world_step/src/: step_world.cpp
src/world_step/src/world_step/: __init__.py  world_step_connection.py
