<?xml version="1.0"?>
<package>
  <name>ga_basicbot_ros_indigo</name>
  <version>0.0.0</version>
  <description>The ga_basicbot_ros_indigo package
  
  This package provides a Python node within the ROS system that 
  communicates with an outside optimization algorithm to simulate the basicbot.  Multiple 
  instances of this package can be launched at once to provide a set of simulation 
  services.</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="simongle@msu.edu">simongle</maintainer>

  <license>GPLv3</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/ga_basicbot_ros_indigo</url> -->

  <author email="simongle@msu.edu">Glen Simon</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>smach</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>smach</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
